--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <!-- Link tag to my website as author -->
         <link rel="author" href="https://www.thecodingcreative.com/">
+        <link rel="stylesheet" href="mystyle.css">
 
         <!-- Short description of your document's subject -->
         <meta name="subject" content="your document's subject">
